feat: add apple auth
