# src/controllers/auth-controller.ts
@@ -36,12 +36,12 @@ export const loginWithoutCodeGoogle = async (req: Request, res: Response) => {
           weight,
           is_ft_weight,
         },
-        { new: true }
+        { new: true },
       )
 
       const token = jwt.sign(
         { _id: user?._id, name: user?.email },
-        process.env.JWT_SECRET
+        process.env.JWT_SECRET,
       )
 
       return res
@@ -61,7 +61,77 @@ export const loginWithoutCodeGoogle = async (req: Request, res: Response) => {
       })
       const token = jwt.sign(
         { _id: user?._id, name: user?.email },
-        process.env.JWT_SECRET
+        process.env.JWT_SECRET,
+      )
+      return res
+        .status(201)
+        .json({ message: "User Registered and logged in.", token })
+    }
+  } catch (error) {
+    res.status(500).json({ message: "Something went wrong..." })
+  }
+}
+
+export const loginWithoutCodeApple = async (req: Request, res: Response) => {
+  const {
+    login,
+    appleToken,
+    sex,
+    birth,
+    height,
+    is_ft_heigth,
+    body_type,
+    physical_activities,
+    weight,
+    is_ft_weight,
+  } = req.body
+
+  try {
+    let user = await User.findOne({ appleToken })
+
+    if (user) {
+      // User already exists, update user with new data
+      user = await User.findOneAndUpdate(
+        { appleToken },
+        {
+          email: login,
+          appleToken,
+          sex,
+          birth,
+          height,
+          is_ft_heigth,
+          body_type,
+          physical_activities,
+          weight,
+          is_ft_weight,
+        },
+        { new: true },
+      )
+
+      const token = jwt.sign(
+        { _id: user?._id, name: user?.email, appleToken: user?.appleToken },
+        process.env.JWT_SECRET,
+      )
+
+      return res
+        .status(201)
+        .json({ message: "User Updated and logged in.", token })
+    } else {
+      user = await User.create({
+        email: login,
+        appleToken,
+        sex,
+        birth,
+        height,
+        is_ft_heigth,
+        body_type,
+        physical_activities,
+        weight,
+        is_ft_weight,
+      })
+      const token = jwt.sign(
+        { _id: user?._id, name: user?.email, appleToken: user?.appleToken },
+        process.env.JWT_SECRET,
       )
       return res
         .status(201)
@@ -96,7 +166,7 @@ export const userRegister = async (req: Request, res: Response) => {
         { email: login },
         {
           code: "",
-        }
+        },
       )
     }, 600000)
 
@@ -127,7 +197,7 @@ export const userRegister = async (req: Request, res: Response) => {
           is_ft_weight,
           status: "inactive",
         },
-        { new: true }
+        { new: true },
       )
 
       sendCodeConfirmation(code, user.email)
@@ -183,11 +253,11 @@ export const userLogin = async (req: Request, res: Response) => {
       { email: login },
       {
         status: "active",
-      }
+      },
     )
     const token = jwt.sign(
       { _id: user?._id, name: user?.email },
-      process.env.JWT_SECRET
+      process.env.JWT_SECRET,
     )
     return res.status(201).json({ message: "User Logged in", token })
   } catch (err) {
@@ -217,7 +287,7 @@ export const deactivateAccount = async (req: Request, res: Response) => {
         },
         {
           new: true,
-        }
+        },
       )
       return res
         .status(200)
